--- a/stupididit/index.html
+++ b/stupididit/index.html
@@ -2,6 +2,10 @@
 <link rel="stylesheet" type="text/css" href="spageti.css" />
 
 <body background="cros bro.png"> 
+<marquee>
+<h1>RUSSEL HOWARD</h1>
+<body>
+</marquee>
 <div class="navbar">
   <a href="#home">gavezone</a>
   <a href="magic.html">magic</a>
@@ -11,11 +15,11 @@
 </div>
 
 <head>
+<title>
+Yoyofox
+</title>
 </head>
-<marquee>
-<h1>RUSSEL HOWARD</h1>
-<body>
-</marquee>
+
 <h2>
 greetins internet denixens
 </h2>
