--- a/stupididit/magic.html
+++ b/stupididit/magic.html
@@ -1,4 +1,10 @@
 <html>
+<head>
+<title>
+Yoyofox
+</title>
+<link rel="icon" href="/about/yoyofoxdrawingstuff.png">
+</head>
 <link rel="stylesheet" type="text/css" href="spageti.css" />
 
 <body>
