--- a/projects/stories/spaghettiMonster.html
+++ b/projects/stories/spaghettiMonster.html
@@ -33,7 +33,7 @@
 		        </h1>
             Spaghetti<br>
             <br>
-            <i>Influenced by Izzy Pearce (<a href="https://yoyofoxdrawingstuff.deviantart.com/">Yoyofoxdrawingstuff</a>)</i>
+            <i>Influenced by Yoyofox (<a href="https://yoyofoxdrawingstuff.deviantart.com/">Yoyofoxdrawingstuff</a>)</i>
 		</div>
 	</body>
 </html>
