Update and rename javascriptTest/index.html to javaScriptTesting/index.html

--- a/javaScriptTesting/index.html
+++ b/javaScriptTesting/index.html
@@ -26,7 +26,7 @@
 		
 		<div style="text-align: center;color: #EEEEEE;">
 			<h1>
-				Javascript testing
+				JavaScript testing
 			</h1>
 			<p></p>
 			<h3 id="content">
