--- a/src/navbar.html
+++ b/src/navbar.html
@@ -154,6 +154,7 @@ body {
       </div>
     </div>
   </div>
+  <a href="/javaScriptTesting/" class="javaScript" height="100%">JavaScript</a>
   <a href="https://github.com/Magnogen/magnogen.github.io/" style="float: right; margin: 0px 5px; padding: 0px 5px; height: 50px">
   	<abbr title="Source code - GitHub">
   		<img src="/src/GitHub_Logo_White.png" alt="GitHub" height="100%">
