--- a/javaScriptTesting/index.html
+++ b/javaScriptTesting/index.html
@@ -33,8 +33,65 @@
 		</div>
         <script>
 			var parsedUrl = new URL(window.location.href);
-            document.getElementById('content').innerHTML = parsedUrl.searchParams.get("filename");
-            if 
+            document.getElementById('content').innerHTML = parsedUrl.searchParams.get("content");
+            if (parsedUrl.searchParams.get("action") == "search") {
+            	document.getElementById('content').innerHTML = " \
+                <style> \
+                	#myInput { \
+                        width: 100%; \
+                        font-size: 16px; \
+                        padding: 12px 20px 12px 40px; \
+                        border: 1px solid #ddd; \
+                        margin-bottom: 12px; \
+                    } \
+ \
+                    #myUL { \
+                        list-style-type: none; \
+                        padding: 0; \
+                        margin: 0; \
+                    } \
+ \
+                    #myUL li a { \
+                        border: 1px solid #ddd; \
+                        margin-top: -1px; \
+                        background-color: \#444444; \
+                        padding: 12px; \
+                        text-decoration: none; \
+                        font-size: 18px; \
+                        color: #ffffff; \
+                        display: block; \
+                    } \
+ \
+                    #myUL li a:hover:not(.header) { \
+                        background-color: \#666666; \
+                    } \
+                </style> \
+                <input type=\"text\" id=\"myInput\" onkeyup=\"myFunction()\" placeholder=\"Search for inputs...\"> \
+				 \
+				<ul id=\"myUL\"> \
+  					<li><a href=\"?content=\">content</a></li> \
+  					<li><a href=\"?action=\">action</a></li> \
+                </ul> \
+                ";
+            }
+            function myFunction() {
+                // Declare variables
+                var input, filter, ul, li, a, i;
+                input = document.getElementById('myInput');
+                filter = input.value.toUpperCase();
+                ul = document.getElementById("myUL");
+                li = ul.getElementsByTagName('li');
+
+                // Loop through all list items, and hide those who don't match the search query
+                for (i = 0; i < li.length; i++) {
+                    a = li[i].getElementsByTagName("a")[0];
+                    if (a.innerHTML.toUpperCase().indexOf(filter) > -1) {
+                        li[i].style.display = "";
+                    } else {
+                        li[i].style.display = "none";
+                    }
+                }
+            }
         </script>
 	</body>
 </html>
