--- a/javaScriptTesting/index.html
+++ b/javaScriptTesting/index.html
@@ -44,13 +44,11 @@
                         border: 1px solid #ddd; \
                         margin-bottom: 12px; \
                     } \
- \
                     #myUL { \
                         list-style-type: none; \
                         padding: 0; \
                         margin: 0; \
                     } \
- \
                     #myUL li a { \
                         border: 1px solid #ddd; \
                         margin-top: -1px; \
@@ -61,16 +59,14 @@
                         color: #ffffff; \
                         display: block; \
                     } \
- \
                     #myUL li a:hover:not(.header) { \
                         background-color: \#666666; \
                     } \
                 </style> \
                 <input type=\"text\" id=\"myInput\" onkeyup=\"myFunction()\" placeholder=\"Search for inputs...\"> \
-				 \
 				<ul id=\"myUL\"> \
-  					<li><a href=\"?content=\">content</a></li> \
-  					<li><a href=\"?action=\">action</a></li> \
+                	<li><a href=\"/javaScriptTesting/?action=\">action</a></li> \
+  					<li><a href=\"/javaScriptTesting/?content=\">content</a></li> \
                 </ul> \
                 ";
             }
@@ -81,8 +77,7 @@
                 filter = input.value.toUpperCase();
                 ul = document.getElementById("myUL");
                 li = ul.getElementsByTagName('li');
-
-                // Loop through all list items, and hide those who don't match the search query
+                
                 for (i = 0; i < li.length; i++) {
                     a = li[i].getElementsByTagName("a")[0];
                     if (a.innerHTML.toUpperCase().indexOf(filter) > -1) {
