--- a/javaScriptTesting/index.html
+++ b/javaScriptTesting/index.html
@@ -12,9 +12,9 @@
 				background-color: #222222;
 				font-family: Verdana, sans-serif;
 			}
-            .javaScript {
-            	background-color: #0000a8;
-            }
+			.javaScript {
+				background-color: #0000a8;
+			}
 		</style>
 	</head>
 	<body>
@@ -29,69 +29,10 @@
 				JavaScript testing
 			</h1>
 			This page is domain-interactive, this means that if you type in the correct variable and then a value for it in the address bar (domain), it will respond in the correct way.<br>
-            <br>
-            Try typing: ?action=search after the current domain, or click <a href="/javaScriptTesting/?action=search">here</a>.
+            		<br>
+            		Try typing: ?action=search after the current domain, or click <a href="/javaScriptTesting/?action=search">here</a>.<br>
 			<div id="content"></div>
 		</div>
-        <script>
-			var parsedUrl = new URL(window.location.href);
-            document.getElementById('content').innerHTML = parsedUrl.searchParams.get("content");
-            if (parsedUrl.searchParams.get("action") == "search") {
-            	document.getElementById('content').innerHTML = " \
-                <style> \
-                	#myInput { \
-                        width: 100%; \
-                        font-size: 16px; \
-                        padding: 12px 20px 12px 40px; \
-                        border: 1px solid #ddd; \
-                        margin-bottom: 12px; \
-                    } \
- \
-                    #myUL { \
-                        list-style-type: none; \
-                        padding: 0; \
-                        margin: 0; \
-                    } \
- \
-                    #myUL li a { \
-                        border: 1px solid #ddd; \
-                        margin-top: -1px; \
-                        background-color: \#444444; \
-                        padding: 12px; \
-                        text-decoration: none; \
-                        font-size: 18px; \
-                        color: #ffffff; \
-                        display: block; \
-                    } \
- \
-                    #myUL li a:hover:not(.header) { \
-                        background-color: \#666666; \
-                    } \
-                </style> \
-                <input type=\"text\" id=\"myInput\" onkeyup=\"myFunction()\" placeholder=\"Search for inputs...\"> \
-				<ul id=\"myUL\"> \
-                	<li><a href=\"/javaScriptTesting/?action=\">action</a></li> \
-  					<li><a href=\"/javaScriptTesting/?content=\">content</a></li> \
-                </ul> \
-                ";
-            }
-            function myFunction() {
-                // Declare variables
-                var input, filter, ul, li, a, i;
-                input = document.getElementById('myInput');
-                filter = input.value.toUpperCase();
-                ul = document.getElementById("myUL");
-                li = ul.getElementsByTagName('li');
-                
-                for (i = 0; i < li.length; i++) {
-                    a = li[i].getElementsByTagName("a")[0];
-                    if (a.innerHTML.toUpperCase().indexOf(filter) > -1) {
-                        li[i].style.display = "";
-                    } else {
-                        li[i].style.display = "none";
-                    }
-                }
-            }
-        </script>
+        	<script src="/javaScriptTesting/script.js"></script>
 	</body>
 </html>
