Improving some things in about/index.html, part 1

--- a/about/index.html
+++ b/about/index.html
@@ -19,8 +19,9 @@
 			.about_area { padding: 0% 10% 12% 10%; color: #EEEEEE; }
 			.about_area > img {
 				display: inline-block;
+				clear: both;
 				width: 50px; height: 50px;
-				margin: 0 0 1em 2em;
+				margin: 0 0 1em 1.6em;
 
 				border: 1px solid rgba(0,0,0,0);
 				-webkit-border-radius: 0.3em;
@@ -34,7 +35,7 @@
 			.about_area > div[data-empty] > * {
 				display: none;
 			} .about_area > div[data-empty] > div:first-child {
-				display: block;
+				display: block !important;
 			}
 		</style>
 	</head>
