Improving / fixing things in about/index.html, part 1

--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,6 @@
 			.about_area { padding: 0% 10% 12% 10%; color: #EEEEEE; }
 			.about_area > img {
 				display: inline-block;
-				clear: both;
 				width: 50px; height: 50px;
 				margin: 0 0 1em 1.6em;
 
@@ -53,8 +52,8 @@
 			<h3 class="sub">
 				Contributors
 			</h3>
-			<img src="/about/hydronesium.jpg" alt="hydronesium profile picture" onclick="show_info(0)">
-			<img src="/about/user-e.jpg" alt="user-e profile picture" onclick="show_info(1)">
+			<img src="/about/hydronesium.jpg" alt="hydronesium profile picture" onclick="show_info(0)"><br>
+			<img src="/about/user-e.jpg" alt="user-e profile picture" onclick="show_info(1)"><br>
 			<img src="/about/yoyofoxdrawingstuff.jpg" alt="yoyofox profile picture" onclick="show_info(2)">
 			
 			<div id="about_info" data-empty>
