Improving some things in about/index.html, part 2b

--- a/about/index.html
+++ b/about/index.html
@@ -60,9 +60,9 @@
 				<div></div>
 			</div>
 			
-			<img src="/about/hydronesium.jpg" alt="hydronesium profile picture" onclick="show_info(0)"><br>
-			<img src="/about/user-e.jpg" alt="user-e profile picture" onclick="show_info(1)"><br>
-			<img src="/about/yoyofoxdrawingstuff.jpg" alt="yoyofox profile picture" onclick="show_info(2)">
+			<img src="/about/hydronesium.jpg" alt="hydronesium profile picture" onclick="show_info(event,0)"><br>
+			<img src="/about/user-e.jpg" alt="user-e profile picture" onclick="show_info(event,1)"><br>
+			<img src="/about/yoyofoxdrawingstuff.jpg" alt="yoyofox profile picture" onclick="show_info(event,2)">
 		</div>
   	</body>
 	<script>
