--- a/about/index.html
+++ b/about/index.html
@@ -37,7 +37,8 @@
 				display: none;
 			} .about_area > div[data-empty] > div:first-child {
 				display: block !important;
-			} .about_area > div > i {
+			} .about_area > div > em {
+				font-style: italic;
 				margin-bottom: 1em;
 			}
 		</style>
@@ -59,7 +60,7 @@
 			<div id="about_info" data-empty>
 				<div style="display: none;">Select a contributor...</div>
 				<div style="font-size: 20px; color: #00a8ff;"></div>
-				<i>Developer</i>
+				<em>Developer</em>
 				<div></div>
 			</div>
 			
