End of improving some things in about/index.html

--- a/about/index.html
+++ b/about/index.html
@@ -114,7 +114,8 @@
                 Website: <a href=\"https://magnogen.github.io/stupididit/\">Yoyofox</a><br> \
                 Deviantart: <a href=\"https://yoyofoxdrawingstuff.deviantart.com/\"> \
 			   yoyofoxdrawingstuff (Yoyofx) | Deviantart</a>",
-		"<em>This user appears to like having an air of mystery about them.</em>"
+		"<em>This user appears to like having an air of mystery about them.</em><br> \
+		(no about info to show here, try the links above)"
 	]];
 	</script>
 </html>
