End of improving some things in about/index.html

--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@
 				-moz-border-radius: 0.4em;
 				border-radius: 0.4em;
 			} .about_area > img[data-selected] {
-				border-left: 0.1em solid #00a8ff;
+				border-left: 0.1em solid #0077b3;
 			}
 			.about_area > div {
 				float: right;
