End of improving some things in about/index.html

--- a/about/index.html
+++ b/about/index.html
@@ -91,18 +91,18 @@
                 YouTube channel: <a href=\"https://www.youtube.com/channel/UCosxKKKPJk4aZlwF_EFe2pw\"> \
 			hydronesium</a><br> \
                 Github: <a href=\"https://github.com/Magnogen\">Magnogen</a>",
-                "Hi there, I'm Connor and I've always wanted a website and now \
-                that I've got one, I'm so happy! I'm going to do maths and \
-                computing at A level buecause I quite like them currently. \
-                I enjoy making music and writing stories (you can see them \
-                under the projects tab in the navigation bar)."
+                "Hi there, my name is Connor. I've always wanted a website and \
+                now that I have one, I'm so happy! For my A levels, I'm going to do \
+                maths and computing because I quite like them currently.<br> \
+                I enjoy making music and writing stories (you can see them under \
+                the projects tab in the navigation bar)."
 			],
 			["user-e", "Developer", "\
                 Website: <a href=\"http://192.168.1.77/a/\"> \
-			   my Raspberry Pi server <i>(non-public)</i></a><br> \
+			my Raspberry Pi server <i>(non-public)</i></a><br> \
 		Scratch profile: <a href=\"https://scratch.mit.edu/users/user-e/\">user-e</a><br> \
 		Google+ page: <a href=\"https://plus.google.com/107507296915460932126\"> \
-			   Edward J</a><br> \
+			Edward J</a><br> \
 		Github: <a href=\"https://github.com/user-e\">user-e</a>",
 		"Hello, I’m someone called Edward.<br> \
 		I don't know much about Github and version control systems \
@@ -113,7 +113,7 @@
 			["Yoyofox", "Inspirational colleague", "\
                 Website: <a href=\"https://magnogen.github.io/stupididit/\">Yoyofox</a><br> \
                 Deviantart: <a href=\"https://yoyofoxdrawingstuff.deviantart.com/\"> \
-			   yoyofoxdrawingstuff (Yoyofx) | Deviantart</a>",
+			yoyofoxdrawingstuff (Yoyofx)</a>",
 		"<em>This user appears to like having an air of mystery about them.</em><br> \
 		(no about info to show here, try the links above)"
 	]];
