--- a/about/index.html
+++ b/about/index.html
@@ -38,7 +38,7 @@
 				display: block !important;
 			} .about_area > div > .add_padding {
 				padding: 0.8em 0 1em 0;
-			} .about_area > div > em {
+			} .about_area > div em {
 				font-style: italic;
 			}
 		</style>
@@ -57,7 +57,7 @@
 			<h3 class="sub">
 				Contributors
 			</h3>
-			<div id="about_info" data-empty>
+			<div data-empty>
 				<div style="display: none;">Select a contributor...</div>
 				<div style="font-size: 1.25em; color: #00a8ff;"></div>
 				<em>Developer</em>
@@ -67,55 +67,56 @@
 			
 			<img src="/about/hydronesium.jpg" alt="hydronesium profile picture" onclick="show_info(event,0)"><br>
 			<img src="/about/user-e.jpg" alt="user-e profile picture" onclick="show_info(event,1)"><br>
-			<img src="/about/yoyofoxdrawingstuff.jpg" alt="yoyofox profile picture" onclick="show_info(event,2)">
+			<img src="/about/yoyofox.jpg" alt="yoyofox profile picture" onclick="show_info(event,2)">
 		</div>
-  	</body>
-	<script>
-	function show_info (event, person) {
-		var info_box = document.getElementById("about_info"),
-		    images = event.currentTarget.parentElement.
-		    getElementsByTagName("img");
-		for (var i = 0; i < images.length; i++) {
-			images[i].removeAttribute("data-selected");
-		}; event.currentTarget.setAttribute("data-selected","");
-		
-		info_box.removeAttribute("data-empty");
-		for (var i = 1; i < info_box.children.length; i++) {
-			info_box.children[i].innerHTML = (about_data[person])[i-1];
+		<script>
+		function show_info (event, person) {
+			var images = event.currentTarget.parentElement.
+				getElementsByTagName("img"), info_box = event.
+				currentTarget.parentElement.children[2];
+			for (var i = 0; i < images.length; i++) {
+				images[i].removeAttribute("data-selected");
+			}; event.currentTarget.setAttribute("data-selected","");
+			
+			info_box.removeAttribute("data-empty");
+			for (var i = 1; i < info_box.children.length; i++) {
+				info_box.children[i].innerHTML = (about_data[person])[i-1];
+			};
 		};
-	};
-	var about_data = [["hydronesium", "Developer", "\
-                Website: <a href=\"http://magnogen.github.io/\">Magnogen - Home</a><br> \
-                Scratch profile: <a href=\"https://scratch.mit.edu/users/hydronesium/\"> \
-			hydronesium on Scratch</a><br> \
-                YouTube channel: <a href=\"https://www.youtube.com/channel/UCosxKKKPJk4aZlwF_EFe2pw\"> \
-			hydronesium</a><br> \
-                Github: <a href=\"https://github.com/Magnogen\">Magnogen</a>",
-                "Hi there, my name is Connor. I've always wanted a website and \
-                now that I have one, I'm so happy! For my A levels, I'm going to do \
-                maths and computing because I quite like them currently.<br> \
-                I enjoy making music and writing stories (you can see them under \
-                the projects tab in the navigation bar)."
-			],
-			["user-e", "Developer", "\
-                Website: <a href=\"http://192.168.1.77/a/\"> \
-			my Raspberry Pi server <i>(non-public)</i></a><br> \
-		Scratch profile: <a href=\"https://scratch.mit.edu/users/user-e/\">user-e</a><br> \
-		Google+ page: <a href=\"https://plus.google.com/107507296915460932126\"> \
-			Edward J</a><br> \
-		Github: <a href=\"https://github.com/user-e\">user-e</a>",
-		"Hello, I’m someone called Edward.<br> \
-		I don't know much about Github and version control systems \
-		but I'm quite good at programming and maths.<br> \
-		I'm going to do Computing at A level, not taking the GCSE.<br> \
-		Here to help out with the webpage making, using my skills."
-			],
-			["Yoyofox", "Inspirational colleague", "\
-                Website: <a href=\"https://magnogen.github.io/stupididit/\">Yoyofox</a><br> \
-                Deviantart: <a href=\"https://yoyofoxdrawingstuff.deviantart.com/\"> \
-			yoyofoxdrawingstuff (Yoyofx)</a>",
-		"<em>This user appears to like having an air of mystery about them.</em><br> \
-		(no about info to show here, try the links above)"
-	]];
-	</script>
+		var about_data = [[
+			"hydronesium", "Developer", "\
+			Website: <a href=\"http://magnogen.github.io/\">Magnogen - Home</a><br>\
+			Scratch profile: <a href=\"https://scratch.mit.edu/users/hydronesium/\">\
+				hydronesium on Scratch</a><br>\
+			YouTube channel: <a href=\"https://www.youtube.com/channel/UCosxKKKPJk4aZlwF_EFe2pw\">\
+				hydronesium</a><br>\
+			Github: <a href=\"https://github.com/Magnogen\">Magnogen</a>",
+			"Hi there, my name is Connor. I've always wanted a website and \
+			now that I have one, I'm so happy! For my A levels, I'm going to do \
+			maths and computing because I quite like them currently.<br>\
+			I enjoy making music and writing stories (you can see them under \
+			the projects tab in the navigation bar)."
+			],[
+			"user-e", "Developer", "\
+			Website: <a href=\"http://192.168.1.77/a/\">\
+				my Raspberry Pi server <i>(non-public)</i></a><br>\
+			Scratch profile: <a href=\"https://scratch.mit.edu/users/user-e/\">user-e</a><br>\
+			Google+ page: <a href=\"https://plus.google.com/107507296915460932126\">\
+				Edward J</a><br>\
+			Github: <a href=\"https://github.com/user-e\">user-e</a>",
+			"Hello, I’m someone called Edward.<br>\
+			I'm good at programming (have coded my own website) and Maths.<br> \
+			Also, I know some things about version control systems/Github.<br> \
+			I'm going to do Computing at A level, not taking the GCSE.<br> \
+			Here to help out with the webpage making, using my skills."
+			],[
+			"Yoyofox", "Inspirational colleague", "\
+			Website: <a href=\"https://magnogen.github.io/stupididit/\">Yoyofox</a><br>\
+			Deviantart: <a href=\"https://yoyofoxdrawingstuff.deviantart.com/\">\
+				yoyofoxdrawingstuff (Yoyofx)</a>",
+			"<em>This user appears to like having an air of mystery about them.</em><br>\
+			(no about info to show here, try the links above)"
+		]];
+		</script>
+	</body>
 </html>
