--- a/about/index.html
+++ b/about/index.html
@@ -104,10 +104,9 @@
 			Google+ page: <a href=\"https://plus.google.com/107507296915460932126\">\
 				Edward J</a><br>\
 			Github: <a href=\"https://github.com/user-e\">user-e</a>",
-			"Hello, I’m someone called Edward.<br>\
-			I'm good at programming (have coded my own website) and Maths.<br> \
-			Also, I know some things about version control systems/Github.<br> \
-			I'm going to do Computing at A level, not taking the GCSE.<br> \
+			"Hello, I’m someone called Edward. I am good at programming (have coded my own \
+			website) and Maths. Also, I know some things about version control systems/Github. \
+			<br>I'm going to do Computing at A level, not taking the GCSE.<br> \
 			Here to help out with the webpage making, using my skills."
 			],[
 			"Yoyofox", "Inspirational colleague", "\
