--- a/src/navbar.html
+++ b/src/navbar.html
@@ -56,45 +56,30 @@ body {
 .dropdown-content .header {
     background: #0033cc;
     padding: 16px;
-    color: white;
+    color: #ffffff;
 }
 .dropdown:hover .dropdown-content {
     display: block;
 }
-.column-edu {
+.column-edu, .column-proj {
     float: left;
-    width: 33.33%;
+    width: 33.333%;
     padding: 10px;
     background-color: #ccc;
-    height: 250px;
+    height: 256px;
 }
 .column-proj {
-    float: left;
-    width: 50%;
-    padding: 10px;
-    background-color: #ccc;
-    height: 250px;
+    width: 50%; !important
 }
-.column-edu a {
+.column-edu a, .column-proj a {
     float: none;
     color: #000000;
-    padding: 16px;
+    padding: 8px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
 }
-.column-proj a {
-    float: none;
-    color: #000000;
-    padding: 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-.column-edu a:hover {
-    background-color: #dddddd;
-}
-.column-proj a:hover {
+.column-edu a:hover, .column-proj a:hover {
     background-color: #dddddd;
 }
 .row:after {
@@ -130,6 +115,7 @@ body {
           <a href="/edu/compSci/programming.html">Programming</a>
           <a href="/edu/compSci/data.html">Data</a>
           <a href="/edu/compSci/policies.html">Network policies</a>
+          <a href="/edu/compSci/encryption.html">Encryption</a>
         </div>
       </div>
     </div>
