--- a/about/index.html
+++ b/about/index.html
@@ -110,9 +110,7 @@
 			Here to help out with the webpage making, using my skills."
 			],[
 			"Yoyofox", "Inspirational colleague", "\
-			Website: <a href=\"https://magnogen.github.io/stupididit/\">Yoyofox</a><br>\
-			Deviantart: <a href=\"https://yoyofoxdrawingstuff.deviantart.com/\">\
-				yoyofoxdrawingstuff (Yoyofx)</a>",
+			Website: <a href=\"https://magnogen.github.io/stupididit/\">Yoyofox</a><br>\",
 			"<em>This user appears to like having an air of mystery about them.</em><br>\
 			(no about info to show here, try the links above)"
 		]];
