--- a/about/index.html
+++ b/about/index.html
@@ -109,11 +109,11 @@
 			<br>I'm going to do Computing at A level, not taking the GCSE.<br> \
 			Here to help out with the webpage making, using my skills."
 			],[
-			"Yoyofox", "Inspirational colleague", "\
-			Website: <a href=\"https://magnogen.github.io/stupididit/\">Yoyofox</a><br>\",
-			"<em>This user appears to like having an air of mystery about them.</em><br>\
-			(no about info to show here, try the links above)"
-		]];
+			"Yoyofox", "Inspirational pizzaria", "\
+			Website: <a href=\"https://magnogen.github.io/stupididit/\">Yoyofox</a><br>",
+			"Note from Yoyofox: \"Please have a seizure.\"<br><br>spageti:<br><img src=\"/about/spageti.png\" alt=\"pixeti\" style=\"width: 50px; height: 50px; image-rendering: pixelated;\">"
+			]
+        		];
 		</script>
 	</body>
 </html>
