--- a/about/index.html
+++ b/about/index.html
@@ -111,9 +111,9 @@
 			],[
 			"Yoyofox", "Inspirational pizzaria", "\
 			Website: <a href=\"https://magnogen.github.io/stupididit/\">Yoyofox</a><br>",
-			"Note from Yoyofox: \"Please have a seizure.\"<br><br>spageti:<br><img src=\"/about/spageti.png\" alt=\"pixeti\" style=\"width: 50px; height: 50px; image-rendering: pixelated;\">"
+			"Note from Yoyofox: \"Please have a seizure.\"<br><img src=\"/about/spageti.png\" alt=\"pixeti\" style=\"width: 50px; height: 50px; image-rendering: pixelated;\">"
 			]
-        		];
+        ];
 		</script>
 	</body>
 </html>
