--- a/javaScriptTesting/index.html
+++ b/javaScriptTesting/index.html
@@ -34,6 +34,7 @@
 			<br>
 			<div id="content"></div>
 		</div>
-        	<script src="/javaScriptTesting/script.js"></script>
+        	<script src=/javaScriptTesting/script.js>
+            </script>
 	</body>
 </html>
