--- a/src/navbar.html
+++ b/src/navbar.html
@@ -136,6 +136,7 @@ body {
         <div class="column-proj">
           <h3>Other</h3>
           <a href="/projects/music.html">My music</a>
+          <a href="/apps/music.html">Applications</a>
         </div>
       </div>
     </div>
