--- a/javaScriptTesting/index.html
+++ b/javaScriptTesting/index.html
@@ -15,6 +15,41 @@
 			.javaScript {
 				background-color: #0000a8;
 			}
+            .tooltip {
+                position: relative;
+                display: inline-block;
+                color: #ffff00;
+            }
+            .tooltip .tooltiptext {
+                visibility: hidden;
+                width: 220px;
+                background-color: #555;
+                color: #fff;
+                text-align: center;
+                padding: 5px 0;
+                border-radius: 6px;
+                position: absolute;
+                z-index: 1;
+                bottom: 125%;
+                left: 50%;
+                margin-left: -110px;
+                opacity: 0;
+                transition: opacity 0.2s;
+            }
+            .tooltip .tooltiptext::after {
+                content: "";
+                position: absolute;
+                top: 100%;
+                left: 50%;
+                margin-left: -5px;
+                border-width: 5px;
+                border-style: solid;
+                border-color: #555 transparent transparent transparent;
+            }
+            .tooltip:hover .tooltiptext {
+                visibility: visible;
+                opacity: 1;
+            }
 		</style>
 	</head>
 	<body>
@@ -28,7 +63,8 @@
 			<h1 style="text-align: center;">
 				JavaScript testing
 			</h1>
-			This page is domain-interactive, this means that if you type in the correct variable and then a value for it in the address bar (domain), it will respond in the correct way.<br>
+			This page is domain-interactive, this means that if you type in the correct variable and then a value for it in the address bar (domain), it will respond in the correct way. Please be advised that, for some operations, this page uses cookies. <div class="tooltip">(?)<span class="tooltiptext" id="cookieTrue">The page doesn't contain cookies at the moment</span>
+</div><br>
             		<br>
             		Try typing: ?action=search after the current domain, or click <a href="/javaScriptTesting/?action=search">here</a>.<br>
 			<br>
