--- a/javaScriptTesting/index.html
+++ b/javaScriptTesting/index.html
@@ -63,9 +63,9 @@
 			<h1 style="text-align: center;">
 				JavaScript testing
 			</h1>
-			This page is domain-interactive, this means that if you type in the correct variable and then a value for it in the address bar (domain), it will respond in the correct way. Please be advised that, for some operations, this page uses cookies. <div class="tooltip">(?)<span class="tooltiptext" id="cookieTrue">The page doesn't contain cookies at the moment</span>
-</div><br>
-            		<br>
+			This page is domain-interactive, this means that if you type in the correct variable and then a value for it in the address bar (domain), it will respond in the correct way. Please be advised that, for some operations, this page uses cookies.<div id="cookiesTrue">
+            	The page doesn't utilise cookies at the moment.
+            </div><br>
             		Try typing: ?action=search after the current domain, or click <a href="/javaScriptTesting/?action=search">here</a>.<br>
 			<br>
 			<div id="content"></div>
