--- a/AppData/music.html
+++ b/AppData/music.html
@@ -4,6 +4,7 @@
   	<title>
       connection established
     </title>
+    <base href="https://magnogen.github.io/">
   </head>
   <style>
     body {
@@ -47,7 +48,7 @@
     <div id="content" class="content">
       Please select an album...
     </div>
-
+    
     <script src="/AppData/music-script.js">
     </script>
 
