--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			</h1>
 			<p></p>
 			<h3>
-				Provideing cool stuf since we lerned how to spell.
+				Inspiring the next generation<span style="font-size: 6px">♿</span>
 				<br><br><br>
 				Here's <span style="font-style: italic;">Py-scratch blocks</span>,
 				that I made myself:<br>
