--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 				background-color: #222222;
 				font-family: Verdana, sans-serif;
 			}
-                        .home {
-                                background-color: #0000a8;
-                        }
+            .home {
+                background-color: #0000a8;
+            }
 		</style>
 	</head>
 	<body>
@@ -24,19 +24,22 @@
 			w3.includeHTML();
 		</script>
 		
-		<div style="text-align: center;color: #EEEEEE;">
-			<h1>
-				<br>Magnogen / hydronesium
+		<div style="color: #EEEEEE; padding: 0% 10% 12% 10%;">
+			<h1 style="text-align: center;">
+				Magnogen / hydronesium
 			</h1>
 			<p></p>
-			<h3>
-				Inspiring the next generation<span style="font-size: 6px">♿</span>
-				<br><br><br>
-				Here's <span style="font-style: italic;">Py-scratch blocks</span>,
-				that I made myself:<br>
-				<img src="/py-scratch_blocks1.jpg" style="margin-top: 0.3em;"
-				     alt="Scratch program blocks edited to use words of Python code." />
-			</h3>
+			<h3 style="text-align: center;">
+			    Inspiring the next generation<span style="font-size: 6px;">#</span>
+            </h3>
+			<br>
+			Welcome to the official Magnogen website! There have been a few contributors to help this website, especially in it's infant stages, you can see those individuals <a href="/about/">here</a>.<br>
+            <br>
+            We've got a few projects on the go at the moment, you can see them all under the projects tab above. ^ There are stories, <a href="/projects/music.html">songs</a> and <a href="/apps/">apps</a>! We hope you'll be interested!<br>
+            <br>
+            There is also a bit of interesting JavaScript-related stuff on the <a href="/javaScriptTesting/">JavaScript page</a> for you to have a look at (also above ^).<br>
+            <br>
+            Want to contact us? Feel free to do so under the <a href="/about/">about section</a>.
 		</div>
 	</body>
 </html>
