--- a/about/index.html
+++ b/about/index.html
@@ -111,7 +111,9 @@
 			],[
 			"Yoyofox", "Inspirational pizzaria", "\
 			Website: <a href=\"https://magnogen.github.io/stupididit/\">Yoyofox</a><br>",
-			"Note from Yoyofox: \"Please have a seizure.\"<br><img src=\"/about/spageti.png\" alt=\"pixeti\" style=\"width: 50px; height: 50px; image-rendering: pixelated;\">"
+			"Note from Yoyofox: \"Please have a seizure.\" (when you see my website homepage) \
+			<br><img src=\"/about/spageti.png\" alt=\"pixeti (spageti)\" style=\" \
+			width: 3em; height: 3em; image-rendering: pixelated;\">"
 			]
         ];
 		</script>
