--- a/projects/music.html
+++ b/projects/music.html
@@ -64,6 +64,7 @@
 			<h1 style="text-align: center;">
 				Music
 			</h1>
+			(Please note that none of this page works correctly at the moment, it will be fixed when I have time. In the mean time, feel free to look at them via YouTube.)
 		    <h2 style="color: #00a8ff" id="originals">
 				Albums
 		    </h2>
