--- a/src/navbar.html
+++ b/src/navbar.html
@@ -16,7 +16,7 @@ body {
     overflow: hidden;
     background-color: #444444;
     font-family: Verdana, sans-serif;
-	position: fixed;
+	position: sticky;
     width: 100%;
 }
 .navbar a {
