--- a/src/navbar.html
+++ b/src/navbar.html
@@ -16,7 +16,9 @@ body {
     overflow: hidden;
     background-color: #444444;
     font-family: Verdana, sans-serif;
-	position: sticky;
+    position: -webkit-sticky;
+  	position: sticky;
+  	top: 0;
     width: 100%;
 }
 .navbar a {
