--- a/src/navbar.html
+++ b/src/navbar.html
@@ -95,7 +95,7 @@ body {
 <div class="navbar">
   <a href="/" class="home" height="100%">Home</a>
   <a href="/about/" class="contrib" height="100%">About</a>
-  <div class="dropdown" height="100%">
+  <div class="dropdown edu" height="100%">
     <button class="dropbtn">Education
       <i class="fa fa-caret-down"></i>
     </button>
@@ -122,7 +122,7 @@ body {
       </div>
     </div>
   </div>
-  <div class="dropdown" height="100%">
+  <div class="dropdown proj" height="100%">
     <button class="dropbtn projects">Projects
       <i class="fa fa-caret-down"></i>
     </button>
