--- a/projects/index.html
+++ b/projects/index.html
@@ -13,7 +13,7 @@
 				background-color: #222222;
 				font-family: Verdana, sans-serif;
 			}
-			.projects {
+			.proj {
 				background-color: #0000a8;
 			}
 		</style>
