--- a/projects/music.html
+++ b/projects/music.html
@@ -44,7 +44,7 @@
             			color: #00dfff;
             			font-weight:bold;
             		}
-			.projects {
+			.proj {
 				background-color: #0000a8;
 			}
             .songs {
