--- a/edu/compSci/policies.html
+++ b/edu/compSci/policies.html
@@ -55,7 +55,7 @@
               • A user gives their password to other employees - the employees can thus
               tell a hacker<br><br>
               • A user reveals their personal information<br><br>
-              • A bypasses the security software<br><br>
+              • A user bypasses the security software<br><br>
               • A user downloads an unknown attachment<br><br>
             </div><br><br>
             If your policy contains rules that people can follow to avoid the reprocussions
