--- a/easteregg.html
+++ b/easteregg.html
@@ -1,19 +1,54 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>
-      Easter egg!
-    </title>
-    <style>
-      body {
-        background-color: #ffffff;
-        color: #ffffff;
-        font-size: 32px;
-        text-align: center;
-        padding: 10% 0%;
-      }
-    </style>
-  </head>
-  <body>
-    Congratulations! You found me!
-  </body>
+	<head>
+		<title>
+			Magnogen - 404
+		</title>
+		<base href="https://magnogen.github.io/">
+		<link rel="icon" href="/src/logo_icon.png">
+		<link rel="stylesheet" type="text/css" href="/src/style.css">
+		<style>
+			body {
+				background-color: #222222;
+				font-family: Verdana, sans-serif;
+			}
+            .backHome {
+            	color: inherit;
+                background-color: #444444;
+                border: none;
+                text-decoration: none;
+                display: inline-block;
+                padding: 4px 8px;
+                color: #ffff00;
+            }
+		</style>
+	</head>
+	<body>
+		<div style="text-align: center;color: #EEEEEE;">
+            <br><br><br>
+			<img src="/src/404.jpg.png" width="33.33%"/>
+			<h1>
+				<p>Oh dear... I feel so embarrassed...
+			</h1>
+			<p></p>
+			<h3>
+				It looks like I've failed in finding that page,<br>
+                maybe I can redirect you back home?<br>
+                <br>
+                <div class="backHome">Click to go back home</div><br>
+                <br>
+                <br>
+                Or, the following problems could be the case:<br>
+                <br>
+                • The link is broken<br>
+                • This page never existed<br>
+                • This page has been removed<br>
+                <a href="/eggg.html" style="color: #eeeeee;text-decoration: none;">
+                	• This page is an easter egg
+                </a><br>
+                <br>
+                (I'll give you a hint: It's the last one! :) )
+			</h3>
+		</div>
+	</body>
 </html>
