--- a/eggg.html
+++ b/eggg.html
@@ -2,18 +2,19 @@
 	<head>
     	<title>
       		Easter egg!
-    	</title>
+		</title>
+	</head>
     	<style>
       		body {
-        		background-color: #ffffff;
-        		color: #ffffff;
-        		font-size: 32px;
-        		text-align: center;
-        		padding: 10% 0%;
+        		height: 100%;
+				background-image: url("image/EasterEggs.jpg");
+				background-size: 100%;
+        		color: black;
+        		font-size: 50px;
+				text-align: center;
       		}
     	</style>
-  </head>
   <body>
-    	Congratulations! You found me!
+		<h3 style="padding:10%;"> Congratulations! You found me! </h3>
   </body>
 </html>
