--- a/about/index.html
+++ b/about/index.html
@@ -8,15 +8,20 @@
 		<link rel="icon" href="/src/logo_icon.png">
 		<link rel="stylesheet" type="text/css" href="/src/style.css">
 		<style>
+			html{
+				height: 100%;
+			}
 			body {
-				background-color: #222222;
+				height: 100%;
+				background-color: blue; /* for older browsers that do not support gradients */
+				background-image: linear-gradient(blue,white,blue); /*gradient background */
 				font-family: Verdana, sans-serif;
 			}
 			.contrib {
 				background-color: #0000a8;
 			}
 
-			.about_area { padding: 0% 10% 12% 10%; color: #EEEEEE; }
+			.about_area { padding: 0% 10% 12% 10%; color: black; }
 			.about_area > img {
 				display: inline-block;
 				width: 3em; height: 3em;
@@ -67,7 +72,8 @@
 			
 			<img src="/about/hydronesium.jpg" alt="hydronesium profile picture" onclick="show_info(event,0)"><br>
 			<img src="/about/user-e.jpg" alt="user-e profile picture" onclick="show_info(event,1)"><br>
-			<img src="/about/yoyofox.jpg" alt="yoyofox profile picture" onclick="show_info(event,2)">
+			<img src="/about/yoyofox.jpg" alt="yoyofox profile picture" onclick="show_info(event,2)"><br>
+			<img src="/about/jimbob123x.jpg" alt="Agunderman10 profile picture" onclick="show_info(event,3)"><br>
 		</div>
 		<script>
 		function show_info (event, person) {
@@ -114,6 +120,11 @@
 			"Note from Yoyofox: \"Please have a seizure.\" (when you see my website homepage) \
 			<br><img src=\"/about/spageti.png\" alt=\"pixeti (spageti)\" style=\" \
 			width: 3em; height: 3em; image-rendering: pixelated;\">"
+			],[
+			"Agunderman10", "Developer", "\
+			Github: <a href=\"https://github.com/Agunderman10\">Agunderman10</a><br>",
+			"Hello, my names's Andrew. I love code of any kind and I enjoy contributing to\
+			open source projects. Feel free to contact me at my email listed on my Github page."
 			]
         ];
 		</script>
