--- a/projects/index.html
+++ b/projects/index.html
@@ -9,8 +9,13 @@
 		<link rel="stylesheet" type="text/css" href="/src/style.css">
 		
 		<style>
+			html {
+				height: 100%;
+			}
 			body {
-				background-color: #222222;
+				height: 100%;
+				background-color: blue; /* for older browsers that do not support gradients */
+				background-image: linear-gradient(blue, white,blue); /*gradient background */
 				font-family: Verdana, sans-serif;
 			}
 			.proj {
