--- a/projects/stories/perpetualNight.html
+++ b/projects/stories/perpetualNight.html
@@ -8,8 +8,13 @@
 		<link rel="icon" href="/src/logo_icon.png">
 		<link rel="stylesheet" type="text/css" href="/src/style.css">
 		<style>
+			html {
+				height: 100%;
+			}
 			body {
-				background-color: #222222;
+				height: 100%;
+				background-color: blue; /* for older browsers that do not support gradients */
+				background-image: linear-gradient(blue, white,blue); /*gradient background */
 				font-family: Verdana, sans-serif;
 			}
             		.sub {
@@ -27,7 +32,7 @@
 		<script>
 			w3.includeHTML();
 		</script>
-		<div style="padding: 0% 10% 12% 10%;color: #eeeeee;">
+		<div style="padding: 0% 10% 12% 10%;color: black;">
             <h1 style="text-align: center;">
 				The perpetual night
 		    </h1>
